--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo-List</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">   
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <section class="vh-100" style="background-color: #3da2c3;">
-        <div class="container py-5 h-100">
-          <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="container py-4 h-100">
+          <div class="row d-flex justify-content-center  h-100">
             <div class="col col-lg-8 col-xl-6">
+              <div class="d-flex  justify-content-center align-items-center" id="titulo">
+                <h1><i class="fa-solid fa-list-check me-3"></i>Todo-List</h1>
+              </div>
               <div class="card rounded-3">
                 <div class="card-body p-4">
                     <!--Caixa e botão para adcionar tarefa-->
@@ -20,15 +24,24 @@
                         <button class="btn btn-primary" type="button" id="btnAdicionar" onclick="addTarefa()">Adicionar</button>
                     </div>
                     <!--Lista de tarefas adcionadas-->
-                  <ul class="list-group rounded-0" id="listartarefas">
-      
-                  </ul>
-                  <div class="divider d-flex align-items-center my-4">
-                    <p class="text-center mx-3 mb-0" style="color: #a2aab7;"> Desenvolvido por:</p>
-                  </div>
+                    <div id="listavazia" class="hidden">
+                      <i class="fa-solid fa-list"></i>
+                      <p>Lista de tarefas esta vazia</p>
+                    </div>
 
-                  <!-- Aqui vai a imagem da logo-->
+                    <ul class="list-group rounded-0" id="listartarefas">
       
+                    </ul>
+                    <div class="divider d-flex align-items-center my-4">
+                      <p class="text-center mx-3 mb-0" style="color: #a2aab7;"> Desenvolvido por:</p>
+                    </div>
+                    <ul class="list-group rounded-0 list-group-horizontal justify-content-center pb-1">
+                      <li class="dev">
+                       <h6>JARDEL BARBOSA</h6>
+                        <p>Desenvolvedor frond-end</p>
+                      </li>
+                    </ul>
+                  <!-- Aqui vai a imagem da logo-->
                 </div>
               </div>
             </div>
