--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
               </div>
               <div class="card rounded-3">
                 <div class="card-body p-4">
-                    <!--Caixa e botão para adcionar tarefa-->
+                    <!--Caixa de texto e botão para adcionar tarefa-->
                     <div class="input-group mb-3">
                         <input type="text" id="inputTarefa" class="form-control" placeholder="Digite a sua tarefa" aria-label="Digite a sua tarefa" aria-describedby="button-addon2">
                         <button class="btn btn-primary" type="button" id="btnAdicionar" onclick="addTarefa()">Adicionar</button>
                     </div>
-                    <!--Lista de tarefas adcionadas-->
+                    <!--Lista de tarefas adicionadas-->
                     <div id="listavazia" class="hidden">
                       <i class="fa-solid fa-list"></i>
                       <p>Lista de tarefas esta vazia</p>
@@ -32,16 +32,16 @@
                     <ul class="list-group rounded-0" id="listartarefas">
       
                     </ul>
+                    <!-- Rodape -->
                     <div class="divider d-flex align-items-center my-4">
                       <p class="text-center mx-3 mb-0" style="color: #a2aab7;"> Desenvolvido por:</p>
                     </div>
                     <ul class="list-group rounded-0 list-group-horizontal justify-content-center pb-1">
                       <li class="dev">
                        <h6>JARDEL BARBOSA</h6>
-                        <p>Desenvolvedor frond-end</p>
+                        <p>Desenvolvedor  Front-End</p>
                       </li>
                     </ul>
-                  <!-- Aqui vai a imagem da logo-->
                 </div>
               </div>
             </div>
